[project]
name = "vcftools"
version = "0.1.0"
description = "Modernized VCFTools environment"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.86",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
